--- a/packages/app/studio/src/ui/dashboard/IntroTiles.sass
+++ b/packages/app/studio/src/ui/dashboard/IntroTiles.sass
@@ -23,11 +23,11 @@ component
 
       > .tile-title
         color: white
-        font-size: 16px
+        font-size: var(--fs-l)
         font-weight: 500
 
     > .tile-text
-      font-size: 13px
+      font-size: var(--fs-m)
       line-height: 1.45
       color: var(--color-shadow)
 
