--- a/packages/app/studio/src/ui/dashboard/Resources.sass
+++ b/packages/app/studio/src/ui/dashboard/Resources.sass
@@ -8,7 +8,7 @@ component
 
   h3
     padding-left: 0.25em
-    font-size: 14px
+    font-size: var(--fs-l)
     border-radius: 0.25em
     width: fit-content
     white-space: nowrap
@@ -31,6 +31,6 @@ component
   .empty-cta
     flex: 0 0 auto
     margin-top: 0.4em
-    font-size: 12px
+    font-size: var(--fs-m)
     color: var(--color-orange)
     cursor: pointer
